// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Default system settings for 'DEMO' - If a change is intentional, update snapshot 1`] = `
{
  "adminAdjudicationReasons": [
    "Overvote",
    "MarginalMark",
  ],
  "auth": {
    "arePollWorkerCardPinsEnabled": false,
    "inactiveSessionTimeLimitMinutes": 30,
    "numIncorrectPinAttemptsAllowedBeforeCardLockout": 5,
    "overallSessionTimeLimitHours": 12,
    "startingCardLockoutDurationSeconds": 15,
  },
  "bmdPrintMode": "bubble_ballot",
  "centralScanAdjudicationReasons": [
    "UnmarkedWriteIn",
  ],
  "disableSystemLimitChecks": true,
  "disableVoterHelpButtons": true,
  "disallowCastingOvervotes": false,
  "markThresholds": {
    "definite": 0.1,
    "marginal": 0.05,
    "writeInTextArea": 0.05,
  },
  "maxCumulativeStreakWidth": 5,
  "precinctScanAdjudicationReasons": [
    "Overvote",
    "BlankBallot",
    "UnmarkedWriteIn",
  ],
  "precinctScanDisableAlarms": true,
  "precinctScanDisableScreenReaderAudio": true,
  "precinctScanEnableBmdBallotScanning": true,
  "quickResultsReportingUrl": "http://localhost:3000/report",
  "retryStreakWidthThreshold": 1,
}
`;

exports[`Default system settings for 'MI' - If a change is intentional, update snapshot 1`] = `
{
  "adminAdjudicationReasons": [
    "Overvote",
    "BlankBallot",
    "MarginalMark",
  ],
  "auth": {
    "arePollWorkerCardPinsEnabled": false,
    "inactiveSessionTimeLimitMinutes": 30,
    "numIncorrectPinAttemptsAllowedBeforeCardLockout": 5,
    "overallSessionTimeLimitHours": 12,
    "startingCardLockoutDurationSeconds": 15,
  },
  "bmdPrintMode": "bubble_ballot",
  "centralScanAdjudicationReasons": [],
  "disableSystemLimitChecks": true,
  "disableVoterHelpButtons": true,
  "disallowCastingOvervotes": false,
  "markThresholds": {
    "definite": 0.1,
    "marginal": 0.05,
    "writeInTextArea": 0.05,
  },
  "maxCumulativeStreakWidth": 5,
  "precinctScanAdjudicationReasons": [
    "Overvote",
    "BlankBallot",
  ],
  "precinctScanDisableAlarms": true,
  "precinctScanDisableScreenReaderAudio": true,
  "precinctScanEnableBmdBallotScanning": true,
  "retryStreakWidthThreshold": 1,
}
`;

exports[`Default system settings for 'MS' - If a change is intentional, update snapshot 1`] = `
{
  "adminAdjudicationReasons": [],
  "auth": {
    "arePollWorkerCardPinsEnabled": false,
    "inactiveSessionTimeLimitMinutes": 30,
    "numIncorrectPinAttemptsAllowedBeforeCardLockout": 5,
    "overallSessionTimeLimitHours": 12,
    "startingCardLockoutDurationSeconds": 15,
  },
  "bmdPrintMode": "summary",
  "centralScanAdjudicationReasons": [
    "Overvote",
    "BlankBallot",
  ],
  "disableSystemLimitChecks": true,
  "disableVoterHelpButtons": true,
  "disallowCastingOvervotes": false,
  "markThresholds": {
    "definite": 0.07,
    "marginal": 0.05,
    "writeInTextArea": 0.05,
  },
  "maxCumulativeStreakWidth": 5,
  "precinctScanAdjudicationReasons": [
    "Overvote",
    "Undervote",
    "BlankBallot",
  ],
  "precinctScanDisableAlarms": true,
  "precinctScanDisableScreenReaderAudio": true,
  "precinctScanEnableBmdBallotScanning": true,
  "quickResultsReportingUrl": "http://localhost:3000/report",
  "retryStreakWidthThreshold": 1,
}
`;

exports[`Default system settings for 'NH' - If a change is intentional, update snapshot 1`] = `
{
  "adminAdjudicationReasons": [],
  "allowOfficialBallotsInTestMode": true,
  "auth": {
    "arePollWorkerCardPinsEnabled": false,
    "inactiveSessionTimeLimitMinutes": 30,
    "numIncorrectPinAttemptsAllowedBeforeCardLockout": 5,
    "overallSessionTimeLimitHours": 12,
    "startingCardLockoutDurationSeconds": 15,
  },
  "bmdPrintMode": "bubble_ballot",
  "centralScanAdjudicationReasons": [
    "Overvote",
    "UnmarkedWriteIn",
  ],
  "disableSystemLimitChecks": true,
  "disableVoterHelpButtons": true,
  "disallowCastingOvervotes": true,
  "markThresholds": {
    "definite": 0.07,
    "marginal": 0.05,
    "writeInTextArea": 0.05,
  },
  "maxCumulativeStreakWidth": 5,
  "precinctScanAdjudicationReasons": [
    "Overvote",
    "UnmarkedWriteIn",
  ],
  "precinctScanDisableAlarms": true,
  "precinctScanDisableScreenReaderAudio": true,
  "precinctScanEnableBmdBallotScanning": true,
  "retryStreakWidthThreshold": 1,
}
`;

exports[`Default system settings for 'SLI' - If a change is intentional, update snapshot 1`] = `
{
  "adminAdjudicationReasons": [],
  "auth": {
    "arePollWorkerCardPinsEnabled": false,
    "inactiveSessionTimeLimitMinutes": 30,
    "numIncorrectPinAttemptsAllowedBeforeCardLockout": 5,
    "overallSessionTimeLimitHours": 12,
    "startingCardLockoutDurationSeconds": 15,
  },
  "bmdPrintMode": "bubble_ballot",
  "centralScanAdjudicationReasons": [],
  "disallowCastingOvervotes": false,
  "markThresholds": {
    "definite": 0.07,
    "marginal": 0.05,
    "writeInTextArea": 0.05,
  },
  "maxCumulativeStreakWidth": 5,
  "precinctScanAdjudicationReasons": [],
  "retryStreakWidthThreshold": 1,
}
`;
